# Farthest-Point-Sampling-OMP

./: .gitmodules  README.md
code/: CMakeLists.txt
code/fps/: setup.py
code/include/: fps_python.h
code/include/fps/: fps.h
code/src/: example.cpp  fps_python.cpp
code/src/fps/: fps.cpp
cpp/: CMakeLists.txt  test_batch_speed.sh
cpp/include/fps/: fps.h
cpp/src/: example.cpp
cpp/src/fps/: fps.cpp
